--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 
-    <!-- header line -->
+    <!-- header content -->
     <div class="container">
         <div class="row ">
             <div class="col-md-7 d-none d-md-block ">
@@ -116,8 +116,34 @@
         </div>
 
     </div>
+    <!-- ---------- -->
+    <!-- in mobile mode -->
+    <div class="text-center mt-5 d-block d-md-none">
+        <h3 class="H3Styl">پروزه های خود را به ما بسپارید!</h3>
+        <p class="PstylMBL"> لورم ایپسوم متن ساختگی با تولید سادگی </p>
+        <div class="m-auto bgStylMBL">
+            <p class="PstylMBL2">الان شروع کنید <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    style="background-color: rgb(49, 144, 253);border-radius: 5px; " fill="currentColor"
+                    class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5" />
+                </svg></p>
+        </div>
 
+        <div class=" text-center mt-3" style="display: inline-flex;">
+            <div>
+                <p class="pstyl5">100+</p>
+                <p class="pstyl6">پروژه های در حال انجام</p>
+            </div>
+            <div  style="border-right:1px #111b477e solid ;content: none;margin: 15px 20px 0 20px;height: 50px;"></div>
+            <div>
+                <p class="pstyl5">100+</p>
+                <p class="pstyl6">پروژه های در حال انجام</p>
+            </div>
+        </div>
+        <h3 class="H3styl2 mt-5">خدمات ما</h3>
 
+    </div>
 
 
     <!-- middle content -->
@@ -621,7 +647,7 @@
 
     <!-- ---------------------------------------- -->
     <!-- last line -->
-    <div class="text-center mt-5 container ">
+    <div class="text-center mt-5 container d-none d-md-block ">
 
         <h3 class="text-center mt-4 textStyl4">سازمان ها و شرکت هایی که افتخار همکاری با ایشان را داشته ایم.</h3>
 
@@ -720,19 +746,19 @@
     </div>
     </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
     <!-- ----------------footer menu-------- -->
     <div class=" d-block d-md-none fixed-bottom">
 
-        <div class="bg-white row mt-5 text-center p-3 " style="position: relative;">
+        <div class="bg-white row  text-center p-0 " style="position: relative;">
 
             <div class="col mt-3">
                 <div><a href="#">
